--- a/src/FractalXam.Android/Properties/AndroidManifest.xml
+++ b/src/FractalXam.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="FractalXam.Android" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="19" />
+	<uses-sdk />
 	<application android:label="FractalXam.Android" android:icon="@drawable/Icon"></application>
-  <uses-feature android:glEsVersion="0x00030001" android:required="true" />
 </manifest>
